services/nginx/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: nginx-app
  namespace: cust3-namespace
  labels:
    app: nginx-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-app
  template:
    metadata:
      labels:
        app: nginx-app
    spec:
      containers:
      - name: nginx
        image: "nginx"
