services/nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-app
    namespace: cust3-namespace
spec:
  selector:
    app: nginx-app
  ports:
  - name: http
    targetPort: 80
    port: 80
