services/nginx/ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nginx-app-ingress
  annotations:    
    kubernetes.io/ingress.class: nginx
    # Add to generate certificates for this ingress
    kubernetes.io/tls-acme: 'true'
spec:
  rules:
    - host: cust3.104.154.19.21.xip.moss.sh
      http:
        paths:
          - backend:
              serviceName: nginx-app
              servicePort: 80
            path: /
  tls:
    - hosts:
        - "cust3.104.154.19.21.xip.moss.sh"
      secretName: nginx-tls
